[package]
name = "ftoc"
version = "0.1.0"
authors = ["Rocky Neurock <jneurock@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A small program to convert Fahrenheit to Celsius."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
